Upgrade to Java 17, Spark 3.4.0, latest Spring Boot, etc